syntax = "proto3";

option go_package = "github.com/couchbase/stellar-nebula/genproto/admin_bucket_v1;admin_bucket_v1";

package com.couchbase.admin.bucket.v1;

service BucketAdmin {
  rpc list_collections(ListCollectionsRequest) returns (ListCollectionsResponse) {}

  rpc create_scope(CreateScopeRequest) returns (CreateScopeResponse) {}
  rpc delete_scope(DeleteScopeRequest) returns (DeleteScopeResponse) {}
  rpc create_collection(CreateCollectionRequest) returns (CreateCollectionResponse) {}
  rpc delete_collection(DeleteCollectionRequest) returns (DeleteCollectionResponse) {}
}

message ListCollectionsRequest { string bucket_name = 1; }

message ListCollectionsResponse {
  message Collection { string name = 1; }

  message Scope {
    string name = 1;
    repeated Collection collections = 2;
  }

  repeated Scope scopes = 1;
}

message CreateScopeRequest {
  string bucket_name = 1;
  string scope_name = 2;
}

message CreateScopeResponse {}

message DeleteScopeRequest {
  string bucket_name = 1;
  string scope_name = 2;
}

message DeleteScopeResponse {}

message CreateCollectionRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
}

message CreateCollectionResponse {}

message DeleteCollectionRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
}

message DeleteCollectionResponse {}
