syntax = "proto3";

option go_package = "github.com/couchbase/stellar-nebula/protos";

package com.couchbase.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

// This is a placeholder for some additional error details, ideally we will
// likely have a few different blocks of error data depending on the error type.
message ErrorInfo {
  string reason = 1;
  map<string, string> metadata = 2;
}

service Couchbase {
  rpc Hello(HelloRequest) returns (HelloResponse) {}

  rpc Get(GetRequest) returns (GetResponse) {}
  rpc GetAndTouch(GetAndTouchRequest) returns (GetResponse) {}
  rpc GetAndLock(GetAndLockRequest) returns (GetResponse) {}
  rpc Unlock(UnlockRequest) returns (UnlockResponse) {}
  rpc GetReplica(GetReplicaRequest) returns (GetResponse) {}
  rpc Touch(TouchRequest) returns (TouchResponse) {}
  rpc Exists(ExistsRequest) returns (ExistsResponse) {}

  rpc Insert(InsertRequest) returns (InsertResponse) {}
  rpc Upsert(UpsertRequest) returns (UpsertResponse) {}
  rpc Replace(ReplaceRequest) returns (ReplaceResponse) {}
  rpc Remove(RemoveRequest) returns (RemoveResponse) {}
  rpc LookupIn(LookupInRequest) returns (LookupInResponse) {}
  rpc MutateIn(MutateInRequest) returns (MutateInResponse) {}

  rpc Query(QueryRequest) returns (stream QueryResponse) {}
  rpc SearchQuery(SearchQueryRequest) returns (stream SearchQueryResponse) {}
  rpc AnalyticsQuery(AnalyticsQueryRequest)
      returns (stream AnalyticsQueryResponse) {}
}

message Cas { uint64 Value = 1; }

message MutationToken {
  string bucket_name = 1;
  uint32 vbucket_id = 2;
  uint64 vbucket_uuid = 3;
  uint64 seq_no = 4;
}

message MutationState { repeated MutationToken tokens = 1; }

enum DurabilityLevel {
  MAJORITY = 0;
  MAJORITY_AND_PERSIST_TO_ACTIVE = 1;
  PERSIST_TO_MAJORITY = 2;
}

enum DocumentContentType {
  // Indicates that we are not able to determine the document content type.
  UNKNOWN = 0;

  // Indicates that the content is raw binary data.
  BINARY = 1;

  // Indicates that the content is JSON
  JSON = 2;
}

message HelloRequest {}

message HelloResponse {}

message GetRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;
}

message GetAndTouchRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;
  google.protobuf.Timestamp expiry = 5;
}

message GetAndLockRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;
  uint32 lock_time = 5;
}

message GetReplicaRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;
  uint32 replica_index = 5;
}

message GetResponse {
  bytes content = 1;
  DocumentContentType content_type = 2;
  Cas cas = 3;
  optional google.protobuf.Timestamp expiry = 4;
}

message UnlockRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;
  Cas cas = 5;
}

message UnlockResponse {}

message TouchRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;
  google.protobuf.Timestamp expiry = 5;
}

message TouchResponse {
  Cas cas = 1;
}

message ExistsRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;
}

message ExistsResponse {
  bool result = 1;
  Cas cas = 2;
}

message InsertRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;
  bytes content = 5;
  DocumentContentType content_type = 6;
  optional google.protobuf.Timestamp expiry = 7;
  optional DurabilityLevel durability_level = 8;
}

message InsertResponse { Cas Cas = 1; }

message UpsertRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;
  bytes content = 5;
  DocumentContentType content_type = 6;
  optional google.protobuf.Timestamp expiry = 7;
  optional DurabilityLevel durability_level = 8;
}

message UpsertResponse { Cas cas = 1; }

message ReplaceRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;
  bytes content = 5;
  DocumentContentType content_type = 6;
  optional Cas cas = 7;
  optional google.protobuf.Timestamp expiry = 8;
  optional DurabilityLevel durability_level = 9;
}

message ReplaceResponse { Cas cas = 1; }

message RemoveRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;
  optional Cas cas = 5;
  optional DurabilityLevel durability_level = 6;
}

message RemoveResponse { Cas cas = 1; }

message LookupInRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;

  message Spec {
    enum Operation {
      GET = 0;
      EXISTS = 1;
      COUNT = 2;
    }
    Operation operation = 1;

    string path = 2;

    message Flags { optional bool xattr = 1; }
    optional Flags flags = 3;
  }

  repeated Spec specs = 5;

  message Flags { optional bool access_deleted = 1; }
  optional Flags flags = 6;
}

message LookupInResponse {
  message Spec {
    // google.rpc.Status status = 1;
    bytes content = 2;
  }
  repeated Spec specs = 1;

  Cas cas = 2;
}

message MutateInRequest {
  string bucket_name = 1;
  string scope_name = 2;
  string collection_name = 3;
  string key = 4;

  message Spec {
    enum Operation {
      INSERT = 0;
      UPSERT = 1;
      REPLACE = 2;
      REMOVE = 3;
      // TODO(brett19): Implement remaining subdoc mutation specs.
    }
    Operation operation = 1;

    string path = 2;
    bytes content = 3;

    message Flags {
      optional bool create_path = 1;
      optional bool xattr = 2;
    }
    optional Flags flags = 4;
  }

  repeated Spec specs = 5;

  enum StoreSemantic {
    REPLACE = 0;
    UPSERT = 1;
    INSERT = 2;
  }
  optional StoreSemantic store_semantic = 6;

  optional DurabilityLevel durability_level = 7;

  optional Cas cas = 8;

  message Flags { optional bool access_deleted = 1; }
  optional Flags flags = 9;
}

message MutateInResponse {
  message Spec { optional bytes content = 1; }
  repeated Spec specs = 1;

  Cas cas = 2;
}

message QueryRequest {
  string statement = 1;

  optional bool read_only = 2;
  optional bool prepared = 3;

  message TuningOptions {
    optional uint32 max_parallelism = 1;
    optional uint32 pipeline_batch = 2;
    optional uint32 pipeline_cap = 3;
    optional google.protobuf.Duration scan_wait = 4;
    optional uint32 scan_cap = 5;
    optional bool disable_metrics = 6;
  }
  optional TuningOptions tuning_options = 4;

  optional string client_context_id = 5;
}

message QueryResponse {
  repeated bytes rows = 1;

  message MetaData {
    string request_id = 1;
    string client_context_id = 2;

    message Metrics {
      google.protobuf.Duration elapsed_time = 1;
      google.protobuf.Duration execution_time = 2;
      uint64 result_count = 3;
      uint64 results_size = 4;
      uint64 mutation_count = 5;
      uint64 sort_count = 6;
      uint64 error_count = 7;
      uint64 warning_count = 8;
    }
    optional Metrics metrics = 3;
  }
  optional MetaData meta_data = 2;
}

message SearchQueryRequest {
  string index_name = 1;
  // stuff
}

message SearchQueryResponse {
  // stuff
}

message AnalyticsQueryRequest {
  string statement = 1;

  optional bool read_only = 2;
  optional bool prepared = 3;

  message TuningOptions {
    optional uint32 max_parallelism = 1;
    optional uint32 pipeline_batch = 2;
    optional uint32 pipeline_cap = 3;
    optional google.protobuf.Duration scan_wait = 4;
    optional uint32 scan_cap = 5;
  }
  optional TuningOptions tuning_options = 4;

  optional string client_context_id = 5;
}

message AnalyticsQueryResponse {
  repeated bytes rows = 1;

  message MetaData {
    string request_id = 1;
    string client_context_id = 2;
  }
  optional MetaData meta_data = 2;
}
